// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/Avatar passes the snapshot test for different sizes 1`] = `
Array [
  <View
    direction="horizontal"
    onLayout={[Function]}
    spacing="s"
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
        }
      }
    >
      <View
        accessibilityRole="image"
        accessible={true}
        isCached={true}
        loaderType="spinner"
        onLayout={[Function]}
        size="s"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F7F9FC",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 1000,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "display": "flex",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
        tint="dark"
        transitionDuration={300}
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": undefined,
              "bottom": 0,
              "display": "flex",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "color": "#C5CEE0",
                    "flex": 0,
                  },
                ],
              ]
            }
          >
            <View
              accessibilityLabel="Loading indicator"
              accessibilityRole="progressbar"
              accessible={true}
              animating={true}
              spinnerSize={15}
              style={
                Object {
                  "height": 15,
                  "width": 15,
                }
              }
              variant="spinner"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "rotate": "-172.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "top": 7.5,
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": -7.5,
                            },
                            Object {
                              "rotate": "352.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
        }
      }
    >
      <View
        accessibilityRole="image"
        accessible={true}
        isCached={true}
        loaderType="spinner"
        onLayout={[Function]}
        size="m"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F7F9FC",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 1000,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "display": "flex",
            "height": 55,
            "justifyContent": "center",
            "width": 55,
          }
        }
        tint="dark"
        transitionDuration={300}
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": undefined,
              "bottom": 0,
              "display": "flex",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "color": "#C5CEE0",
                    "flex": 0,
                  },
                ],
              ]
            }
          >
            <View
              accessibilityLabel="Loading indicator"
              accessibilityRole="progressbar"
              accessible={true}
              animating={true}
              spinnerSize={15}
              style={
                Object {
                  "height": 15,
                  "width": 15,
                }
              }
              variant="spinner"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "rotate": "-172.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "top": 7.5,
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": -7.5,
                            },
                            Object {
                              "rotate": "352.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
        }
      }
    >
      <View
        accessibilityRole="image"
        accessible={true}
        isCached={true}
        loaderType="spinner"
        onLayout={[Function]}
        size="l"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F7F9FC",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 1000,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "display": "flex",
            "height": 70,
            "justifyContent": "center",
            "width": 70,
          }
        }
        tint="dark"
        transitionDuration={300}
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": undefined,
              "bottom": 0,
              "display": "flex",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "color": "#C5CEE0",
                    "flex": 0,
                  },
                ],
              ]
            }
          >
            <View
              accessibilityLabel="Loading indicator"
              accessibilityRole="progressbar"
              accessible={true}
              animating={true}
              spinnerSize={15}
              style={
                Object {
                  "height": 15,
                  "width": 15,
                }
              }
              variant="spinner"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "rotate": "-172.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "top": 7.5,
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": -7.5,
                            },
                            Object {
                              "rotate": "352.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityRole="image"
        accessible={true}
        isCached={true}
        loaderType="spinner"
        onLayout={[Function]}
        size="xl"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F7F9FC",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 1000,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "display": "flex",
            "height": 85,
            "justifyContent": "center",
            "width": 85,
          }
        }
        tint="dark"
        transitionDuration={300}
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": undefined,
              "bottom": 0,
              "display": "flex",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "color": "#C5CEE0",
                    "flex": 0,
                  },
                ],
              ]
            }
          >
            <View
              accessibilityLabel="Loading indicator"
              accessibilityRole="progressbar"
              accessible={true}
              animating={true}
              spinnerSize={15}
              style={
                Object {
                  "height": 15,
                  "width": 15,
                }
              }
              variant="spinner"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "rotate": "-172.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "top": 7.5,
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": -7.5,
                            },
                            Object {
                              "rotate": "352.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
  <View
    direction="horizontal"
    onLayout={[Function]}
    spacing="s"
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginTop": 12,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
        }
      }
    >
      <View
        onLayout={[Function]}
        size="s"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ff0000",
            "borderRadius": 1000,
            "display": "flex",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          scaleFontSize={true}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Regular",
              "fontSize": 13.799999999999999,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 20,
            }
          }
          variant="caption"
        >
          RA
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
        }
      }
    >
      <View
        onLayout={[Function]}
        size="m"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ff0000",
            "borderRadius": 1000,
            "display": "flex",
            "height": 55,
            "justifyContent": "center",
            "width": 55,
          }
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          scaleFontSize={true}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Regular",
              "fontSize": 18.4,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 28,
            }
          }
          variant="p1"
        >
          J
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
        }
      }
    >
      <View
        onLayout={[Function]}
        size="l"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ff0000",
            "borderRadius": 1000,
            "display": "flex",
            "height": 70,
            "justifyContent": "center",
            "width": 70,
          }
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          scaleFontSize={true}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Regular",
              "fontSize": 18.4,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 28,
            }
          }
          variant="p1"
        >
          SG
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <View
        onLayout={[Function]}
        size="xl"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ff0000",
            "borderRadius": 1000,
            "display": "flex",
            "height": 85,
            "justifyContent": "center",
            "width": 85,
          }
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          scaleFontSize={true}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Regular",
              "fontSize": 29.9,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 38,
            }
          }
          variant="p1"
        >
          Y
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`Molecules/Avatar passes the snapshot test for fallback support 1`] = `
<View
  direction="horizontal"
  onLayout={[Function]}
  spacing="s"
  style={
    Object {
      "alignSelf": "flex-start",
      "borderRadius": undefined,
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 12,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00ffff",
          "borderRadius": 1000,
          "display": "flex",
          "height": 55,
          "justifyContent": "center",
          "width": 55,
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 18.4,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 28,
          }
        }
        variant="p1"
      >
        RA
      </Text>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 12,
      }
    }
  >
    <View
      accessibilityRole="image"
      accessible={true}
      fallbackSource={
        Object {
          "uri": "https://cdn.segmentnext.com/wp-content/themes/segmentnext/images/no-image-available.jpg",
        }
      }
      isCached={true}
      loaderType="spinner"
      onLayout={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ff0000",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 1000,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "display": "flex",
          "height": 55,
          "justifyContent": "center",
          "width": 55,
        }
      }
      tint="dark"
      transitionDuration={300}
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "borderRadius": undefined,
            "bottom": 0,
            "display": "flex",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "color": "#C5CEE0",
                  "flex": 0,
                },
              ],
            ]
          }
        >
          <View
            accessibilityLabel="Loading indicator"
            accessibilityRole="progressbar"
            accessible={true}
            animating={true}
            spinnerSize={15}
            style={
              Object {
                "height": 15,
                "width": 15,
              }
            }
            variant="spinner"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 15,
                    "transform": Array [
                      Object {
                        "rotate": "82.5deg",
                      },
                      Object {
                        "rotate": "0deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "height": 7.5,
                      "overflow": "hidden",
                      "width": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": 15,
                        "transform": Array [
                          Object {
                            "translateY": 0,
                          },
                          Object {
                            "rotate": "-172.5deg",
                          },
                        ],
                        "width": 15,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        Object {
                          "height": 7.5,
                          "overflow": "hidden",
                          "width": 15,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "borderColor": "#C5CEE0",
                            "borderRadius": 7.5,
                            "borderWidth": 1.5,
                            "height": 15,
                            "width": 15,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 15,
                    "transform": Array [
                      Object {
                        "rotate": "82.5deg",
                      },
                      Object {
                        "rotate": "0deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "height": 7.5,
                      "overflow": "hidden",
                      "top": 7.5,
                      "width": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": 15,
                        "transform": Array [
                          Object {
                            "translateY": -7.5,
                          },
                          Object {
                            "rotate": "352.5deg",
                          },
                        ],
                        "width": 15,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        Object {
                          "height": 7.5,
                          "overflow": "hidden",
                          "width": 15,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "borderColor": "#C5CEE0",
                            "borderRadius": 7.5,
                            "borderWidth": 1.5,
                            "height": 15,
                            "width": 15,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#EDF1F7",
          "borderRadius": 1000,
          "display": "flex",
          "height": 55,
          "justifyContent": "center",
          "width": 55,
        }
      }
    >
      <Text />
    </View>
  </View>
</View>
`;

exports[`Molecules/Avatar withBadge HOC works as expected 1`] = `
<View
  direction="horizontal"
  onLayout={[Function]}
  spacing="s"
  style={
    Object {
      "alignSelf": "flex-start",
      "borderRadius": undefined,
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 12,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "flex-start",
          "borderRadius": undefined,
          "display": "flex",
        }
      }
    >
      <View
        accessibilityRole="image"
        accessible={true}
        isCached={true}
        loaderType="spinner"
        onLayout={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F7F9FC",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 1000,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "display": "flex",
            "height": 55,
            "justifyContent": "center",
            "width": 55,
          }
        }
        tint="dark"
        transitionDuration={300}
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": undefined,
              "bottom": 0,
              "display": "flex",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "color": "#C5CEE0",
                    "flex": 0,
                  },
                ],
              ]
            }
          >
            <View
              accessibilityLabel="Loading indicator"
              accessibilityRole="progressbar"
              accessible={true}
              animating={true}
              spinnerSize={15}
              style={
                Object {
                  "height": 15,
                  "width": 15,
                }
              }
              variant="spinner"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "rotate": "-172.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "top": 7.5,
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": -7.5,
                            },
                            Object {
                              "rotate": "352.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "flex-start",
            "borderRadius": undefined,
            "bottom": -0,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": "absolute",
            "right": -0,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            size="s"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#A2D608",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 15,
                  "justifyContent": "center",
                  "minWidth": 15,
                },
                Object {
                  "backgroundColor": "#A2D608",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": undefined,
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": undefined,
                  "opacity": undefined,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 12,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "flex-start",
          "borderRadius": undefined,
          "display": "flex",
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#00ffff",
            "borderRadius": 1000,
            "display": "flex",
            "height": 55,
            "justifyContent": "center",
            "width": 55,
          }
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          scaleFontSize={true}
          style={
            Object {
              "color": "#1A2138",
              "display": "flex",
              "fontFamily": "Poppins-Regular",
              "fontSize": 18.4,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 28,
            }
          }
          variant="p1"
        >
          RA
        </Text>
      </View>
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "flex-start",
            "borderRadius": undefined,
            "bottom": -0,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": "absolute",
            "right": -0,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            size="s"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FF4B42",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 20,
                  "justifyContent": "center",
                  "minWidth": 20,
                },
                Object {
                  "backgroundColor": "#FF4B42",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": undefined,
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": undefined,
                  "opacity": undefined,
                },
              ]
            }
          >
            <Text
              accessibilityRole="text"
              accessible={true}
              allowFontScaling={true}
              scaleFontSize={true}
              style={
                Object {
                  "color": "#FFFFFF",
                  "display": "flex",
                  "fontFamily": "Poppins-Medium",
                  "fontSize": 11.5,
                  "fontStyle": "normal",
                  "fontWeight": "500",
                  "lineHeight": 16,
                  "paddingHorizontal": 4,
                }
              }
              variant="btn4"
            >
              0
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "flex-start",
          "borderRadius": undefined,
          "display": "flex",
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ff0000",
            "borderRadius": 1000,
            "display": "flex",
            "height": 55,
            "justifyContent": "center",
            "width": 55,
          }
        }
      />
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "flex-start",
            "borderRadius": undefined,
            "bottom": -5,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": "absolute",
            "right": -5,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            size="m"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 25,
                  "justifyContent": "center",
                  "minWidth": 25,
                },
                Object {
                  "backgroundColor": "#6A7BFF",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": undefined,
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": undefined,
                  "opacity": undefined,
                },
              ]
            }
          >
            <Text />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
